WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314005
[Site Isolation] navigate-to-unparseable-url.html fails
https://bugs.webkit.org/show_bug.cgi?id=314005
Summary
[Site Isolation] navigate-to-unparseable-url.html fails
Ryosuke Niwa
Reported
2026-05-04 12:46:35 PDT
navigate-to-unparseable-url.html fails under --site-isolation hitting a debug assertion as follows: ASSERTION FAILED: !navigation->currentRequest().isEmpty() /Volumes/Data/safari-2/OpenSource/Source/WebKit/UIProcess/WebPageProxy.cpp(5887) : auto WebKit::WebPageProxy::continueNavigationInNewProcess(API::Navigation &, WebFrameProxy &, RefPtr<SuspendedPageProxy> &&, BrowsingContextGroup &, Ref<WebProcessProxy> &&, ProcessSwapRequestedByClient, ShouldTreatAsContinuingLoad, std::optional<NetworkResourceLoadIdentifier>, LoadedWebArchive, NavigationUpgradeToHTTPSBehavior, WebCore::ProcessSwapDisposition, WebsiteDataStore *)::(anonymous class)::operator()() 1 0x131396654 WebKit::WebPageProxy::continueNavigationInNewProcess(API::Navigation&, WebKit::WebFrameProxy&, WTF::RefPtr<WebKit::SuspendedPageProxy, WTF::RawPtrTraits<WebKit::SuspendedPageProxy>, WTF::DefaultRefDerefTraits<WebKit::SuspendedPageProxy>>&&, WebKit::BrowsingContextGroup&, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::ProcessSwapRequestedByClient, WebCore::ShouldTreatAsContinuingLoad, std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::NetworkResourceLoadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::LoadedWebArchive, WebCore::NavigationUpgradeToHTTPSBehavior, WebCore::ProcessSwapDisposition, WebKit::WebsiteDataStore*)::$_2::operator()() 2 0x131396210 WTF::Detail::CallableWrapper<WebKit::WebPageProxy::continueNavigationInNewProcess(API::Navigation&, WebKit::WebFrameProxy&, WTF::RefPtr<WebKit::SuspendedPageProxy, WTF::RawPtrTraits<WebKit::SuspendedPageProxy>, WTF::DefaultRefDerefTraits<WebKit::SuspendedPageProxy>>&&, WebKit::BrowsingContextGroup&, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::ProcessSwapRequestedByClient, WebCore::ShouldTreatAsContinuingLoad, std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::NetworkResourceLoadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::LoadedWebArchive, WebCore::NavigationUpgradeToHTTPSBehavior, WebCore::ProcessSwapDisposition, WebKit::WebsiteDataStore*)::$_2, void>::call() 3 0x12d8b1264 WTF::Function<void ()>::operator()() const 4 0x13129fddc WebKit::WebPageProxy::continueNavigationInNewProcess(API::Navigation&, WebKit::WebFrameProxy&, WTF::RefPtr<WebKit::SuspendedPageProxy, WTF::RawPtrTraits<WebKit::SuspendedPageProxy>, WTF::DefaultRefDerefTraits<WebKit::SuspendedPageProxy>>&&, WebKit::BrowsingContextGroup&, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::ProcessSwapRequestedByClient, WebCore::ShouldTreatAsContinuingLoad, std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::NetworkResourceLoadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::LoadedWebArchive, WebCore::NavigationUpgradeToHTTPSBehavior, WebCore::ProcessSwapDisposition, WebKit::WebsiteDataStore*) 5 0x131391140 WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_0::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 6 0x131392f34 WTF::Detail::CallableWrapper<WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_0, void, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral>::call(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 7 0x1315264f8 WTF::Function<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) const 8 0x1314b6018 WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 9 0x1315277d0 WebKit::WebProcessPool::prepareProcessForNavigation(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebPageProxy&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral, WebKit::WebProcessProxy::IsolatedProcessType, WebCore::Site const&, WebCore::Site const&, API::Navigation const&, WebKit::WebProcessProxy::LockdownMode, WebKit::EnhancedSecurity, WebKit::LoadedWebArchive, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&, unsigned int)::$_0::operator()(WebKit::SuspendedPageProxy*) 10 0x131527424 WebKit::WebProcessPool::prepareProcessForNavigation(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebPageProxy&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral, WebKit::WebProcessProxy::IsolatedProcessType, WebCore::Site const&, WebCore::Site const&, API::Navigation const&, WebKit::WebProcessProxy::LockdownMode, WebKit::EnhancedSecurity, WebKit::LoadedWebArchive, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&, unsigned int)::$_1::operator()() 11 0x1315272c4 WTF::Detail::CallableWrapper<WebKit::WebProcessPool::prepareProcessForNavigation(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebPageProxy&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral, WebKit::WebProcessProxy::IsolatedProcessType, WebCore::Site const&, WebCore::Site const&, API::Navigation const&, WebKit::WebProcessProxy::LockdownMode, WebKit::EnhancedSecurity, WebKit::LoadedWebArchive, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&, unsigned int)::$_1, void>::call()
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-05-04 12:52:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64199
EWS
Comment 2
2026-05-07 15:54:25 PDT
Committed
312837@main
(f89549a90a5d): <
https://commits.webkit.org/312837@main
> Reviewed commits have been landed. Closing PR #64199 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-05-07 15:55:13 PDT
<
rdar://problem/176503118
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug