[Site Isolation] navigate-to-unparseable-url.html fails https://bugs.webkit.org/show_bug.cgi?id=314005

Reviewed by Basuke Suzuki.

Cancel the provisional page when the navigation request is empty in WebPageProxy::continueNavigationInNewProcess.

We can't exit early in HTMLAnchorElement::handleClick because at that point, we don't yet know if URL could be
parsed with NSURL even though it had failed to parse with WTF::URL. An existing API test (WebKit.NavigateToInvalidURL)
verifies this behavior.

Test: imported/w3c/web-platform-tests/html/browsers/browsing-the-web/navigating-across-documents/navigate-to-unparseable-url.html

* LayoutTests/platform/ios-site-isolation/TestExpectations:
* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::continueNavigationInNewProcess):

Canonical link: https://commits.webkit.org/312837@main